fix API + fix docs+ add some docs
